# LegalOS

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
claude-project/: README.md  analysis_checklist.md  doc_type_guidance.md  instructions.md  scoring_rubric.md
documents/: DROP_FILES_HERE.txt
examples/: NexaFlow_Series_A_TermSheet.docx  README.md  guide_sha.html  guide_ssa.html  guide_term_sheet.html  sample_report.html
src/legalos/: __init__.py  __main__.py  cli.py  config.py  mcp_server.py
src/legalos/analysis/: client.py  engine.py  schemas.py
src/legalos/analysis/prompts/: __init__.py  capital.py  control.py  executive_summary.py  explainer.py  financial_terms.py  founder_obligations.py  impact.py  investor_rights.py  key_events.py  quick_scan.py  redline.py  system.py
src/legalos/parsing/: base.py  chunker.py  docx_parser.py  image_parser.py  pdf_parser.py  router.py
src/legalos/profile/: __init__.py  auto_populate.py  claude_export.py  feedback_flow.py  init_flow.py  learning_capture.py  preferences_export.py  prompt_injection.py  schemas.py  store.py
src/legalos/qa/: session.py
src/legalos/redline/: generator.py
src/legalos/report/: generator.py
src/legalos/report/templates/: report.html  styles.css
src/legalos/utils/: errors.py  progress.py
tests/: conftest.py  test_cli_commands.py  test_cli_kb.py  test_learning_capture.py  test_prompt_injection.py  test_schemas.py  test_store.py  test_store_crud.py
